--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,19 @@
-name: Hello World
-on: [push]
-jobs:
-  Hello-World-Job:
-    runs-on:
-      - codebuild-myProject-${{ github.run_id }}-${{ github.run_attempt }}
-    steps:
-      - run: echo "Hello World!"
+version: 0.2
+
+phases:
+  install:
+    runtime-versions:
+      nodejs: 16
+    commands:
+      - echo Installing dependencies...
+      - npm install
+
+  build:
+    commands:
+      - echo Build started on `date`
+      - npm run build
+
+artifacts:
+  files:
+    - '**/*'
+
