--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,19 +1,55 @@
-version: 0.2
+version: 0.2 
 
-phases:
-  install:
-    runtime-versions:
-      nodejs: 16
-    commands:
-      - echo Installing dependencies...
-      - npm install
+ 
 
-  build:
-    commands:
-      - echo Build started on `date`
-      - npm run build
+phases: 
 
-artifacts:
-  files:
-    - '**/*'
+  pre_build: 
 
+    commands: 
+
+      - echo Logging in to Amazon ECR... 
+
+      - aws --version 
+
+      - aws ecr <login-command> 
+
+      - REPOSITORY_URI= 
+
+      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7) 
+
+      - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}') 
+
+  build: 
+
+    commands: 
+
+      - echo Build started on `date` 
+
+      - echo Building the Docker image... 
+
+      - docker build -t $REPOSITORY_URI:latest . 
+
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
+
+  post_build: 
+
+    commands: 
+
+      - echo Build completed on `date` 
+
+      - echo Pushing the Docker images... 
+
+      - docker push $REPOSITORY_URI:latest 
+
+      - docker push $REPOSITORY_URI:$IMAGE_TAG 
+
+      - echo Writing image definitions file... 
+
+      - printf '[{"name":"nodeapp","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json 
+
+      - cat imagedefinitions.json  
+
+artifacts: 
+
+    files: imagedefinitions.json
