--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
 
       - aws --version 
 
-      - aws ecr aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 970547352475.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 970547352475.dkr.ecr.us-east-1.amazonaws.com
 
       - REPOSITORY_URI= 970547352475.dkr.ecr.us-east-1.amazonaws.com/level_5/labs
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7) 
