--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,7 +26,7 @@ phases:
 
       - echo Building the Docker image... 
 
-      - docker build -t $REPOSITORY_URI:latest . 
+      - docker build $REPOSITORY_URI:latest . 
 
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG 
 
